force-app/main/default/objects/clofor_com_cfs__InventoryReport__c/fields/clofor_com_cfs__ClosingQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ClosingQuantity__c</fullName>
    <label>Closing Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>