force-app/main/default/objects/clofor_com_cfs__InventoryReport__c/fields/clofor_com_cfs__ClosingQuantityVerification__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ClosingQuantityVerification__c</fullName>
    <formula>clofor_com_cfs__StockInQuantity__c - clofor_com_cfs__StockOutQuantity__c +   clofor_com_cfs__ReconcileQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Quantity Verification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>