force-app/main/default/objects/clofor_com_cfs__InventoryReport__c/fields/clofor_com_cfs__EndDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>