force-app/main/default/objects/clofor_com_cfs__InventoryReport__c/fields/clofor_com_cfs__FacilityID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FacilityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility ID</label>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipLabel>INVENTORY REPORT</relationshipLabel>
    <relationshipName>InventoryReport</relationshipName>
    <type>Lookup</type>
</CustomField>