force-app/main/default/objects/clofor_com_cfs__InventoryReport__c/fields/clofor_com_cfs__OpeningQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OpeningQuantity__c</fullName>
    <formula>clofor_com_cfs__PreviousInventoryReportID__r.clofor_com_cfs__ClosingQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opening Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>