force-app/main/default/objects/clofor_com_cfs__InventoryReport__c/fields/clofor_com_cfs__PreviousInventoryReportID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PreviousInventoryReportID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Inventory Report ID</label>
    <referenceTo>clofor_com_cfs__InventoryReport__c</referenceTo>
    <relationshipLabel>NEXT INVENTORY REPORT</relationshipLabel>
    <relationshipName>InventoryReport</relationshipName>
    <type>Lookup</type>
</CustomField>