force-app/main/default/objects/clofor_com_cfs__InventoryReport__c/fields/clofor_com_cfs__ReconcileQuantityInPeriod__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReconcileQuantityInPeriod__c</fullName>
    <formula>clofor_com_cfs__ReconcileQuantity__c -  clofor_com_cfs__PreviousInventoryReportID__r.clofor_com_cfs__ReconcileQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reconcile Quantity in Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>