force-app/main/default/objects/clofor_com_cfs__InventoryReport__c/fields/clofor_com_cfs__ReportPeriodType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReportPeriodType__c</fullName>
    <label>Report Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ReportFrequencyType</valueSetName>
    </valueSet>
</CustomField>