force-app/main/default/objects/clofor_com_cfs__InventoryReport__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__ProductID__c</columns>
    <columns>clofor_com_cfs__FacilityID__c</columns>
    <columns>clofor_com_cfs__InventoryLogID__c</columns>
    <columns>clofor_com_cfs__ReportPeriodType__c</columns>
    <columns>clofor_com_cfs__PreviousInventoryReportID__c</columns>
    <columns>clofor_com_cfs__StartDate__c</columns>
    <columns>clofor_com_cfs__EndDate__c</columns>
    <columns>clofor_com_cfs__OpeningQuantity__c</columns>
    <columns>clofor_com_cfs__StockInQuantity__c</columns>
    <columns>clofor_com_cfs__StockOutQuantity__c</columns>
    <columns>clofor_com_cfs__ClosingQuantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>